--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "expo": "~49.0.15",
+    "expo-camera": "~13.4.4",
+    "expo-media-library": "~15.4.1",
     "expo-status-bar": "~1.6.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
