--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@rneui/base": "github:react-native-elements/react-native-elements#base",
+    "@rneui/themed": "^0.0.0-edge.2",
     "expo": "~49.0.15",
     "expo-camera": "~13.4.4",
     "expo-media-library": "~15.4.1",
